# rmc_vikunja_mcp

./: .env.example  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/vikunja_mcp/: __init__.py  __main__.py  client.py  models.py  server.py
src/vikunja_mcp/client/: __init__.py  base.py  filters.py  labels.py  projects.py  tasks.py  users.py
src/vikunja_mcp/tools/: filters.py  labels.py  projects.py  tasks.py  users.py
tests/: __init__.py  test_server.py
