[project]
name = "rmc-vikunja-mcp"
version = "0.2.2"
description = "Model Context Protocol (MCP) server for Vikunja"
readme = "README.md"
authors = [
    { name = "rmc8" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.27.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[project.urls]
Homepage = "https://github.com/rmc8/rmc_vikunja_mcp"
Repository = "https://github.com/rmc8/rmc_vikunja_mcp"
Issues = "https://github.com/rmc8/rmc_vikunja_mcp/issues"

[project.scripts]
vikunja-mcp = "vikunja_mcp.server:main"
rmc-vikunja-mcp = "vikunja_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.pyright]
extraPaths = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/vikunja_mcp"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "PL",   # pylint
    "RUF",  # Ruff-specific rules
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "PT",   # flake8-pytest-style
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
]
ignore = ["PLR2004", "PLR0913"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
